# FileExplorer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
3rdLibrary/FFmpeg/include/libavutil/: ffversion.h
controller/: Controller.cpp  Controller.h
model/: DataAcquisition.cpp  DataAcquisition.h  DataModel.cpp  DataModel.h  FileOperation.cpp  FileOperation.h  ImageProvider.cpp  ImageProvider.h  Utils.cpp  Utils.h  WorkThread.cpp  WorkThread.h
view/: FileComponent.qml  FileMenu.qml  FileTree.qml  LargeIconComponent.qml  MyButton.qml  PathNavigation.qml  main.qml
